k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: andrewbruce-net
  labels:
    app: andrewbruce-net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: andrewbruce-net
  template:
    metadata:
      labels:
        app: andrewbruce-net
    spec:
      containers:
      - name: andrewbruce-net
        image: eu.gcr.io/code-supply/andrewbruce-net:${VERSION}
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
