k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: andrewbruce-net
  labels:
    app: andrewbruce-net
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: andrewbruce-net
